[gd_scene load_steps=15 format=2]

[ext_resource path="res://art/sprites/tiles_set/tiles_set.png" type="Texture" id=1]
[ext_resource path="res://scenes/1_player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/1_creator.tscn" type="PackedScene" id=3]
[ext_resource path="res://art/fondos/fondofinal.png" type="Texture" id=4]
[ext_resource path="res://art/fondos/fondo2.png" type="Texture" id=5]
[ext_resource path="res://art/fondos/fondoprimero.png" type="Texture" id=6]
[ext_resource path="res://scenes/1_hiud.tscn" type="PackedScene" id=7]
[ext_resource path="res://code/1_levels.gd" type="Script" id=9]
[ext_resource path="res://scenes/1_roll.tscn" type="PackedScene" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5271.04, 138.546 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 7.62939e-06, 0, 100, 0, 100, 100, 7.62939e-06, 100 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 7.62939e-06, 7.62939e-06, 100, 7.62939e-06, 100, 100, 7.62939e-06, 100 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 100, 50, 7.62939e-06, 50, 7.62939e-06, 0, 100, 0 )

[sub_resource type="TileSet" id=5]
0/name = "tiles_set.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 100, 0, 100, 100 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "tiles_set.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 100, 100, 100, 100 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 3 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "tiles_set.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 100, 0, 100, 50 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 4 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0

[node name="Level01" type="Node2D"]
script = ExtResource( 9 )

[node name="respaw" type="Position2D" parent="."]
position = Vector2( 1716.14, 23.6046 )

[node name="bound" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="bound"]
position = Vector2( 4153.17, 986.723 )
shape = SubResource( 1 )

[node name="World" type="TileMap" parent="."]
tile_set = SubResource( 5 )
cell_size = Vector2( 50, 50 )
format = 1
tile_data = PoolIntArray( -393222, 2, 0, -393220, 2, 0, -327686, 1, 0, -327684, 1, 0, -327662, 2, 0, -327654, 2, 0, -327652, 2, 0, -327650, 2, 0, -327648, 2, 0, -327646, 2, 0, -327641, 2, 0, -327639, 2, 0, -327637, 2, 0, -327635, 2, 0, -327630, 2, 0, -327628, 2, 0, -327626, 2, 0, -327624, 2, 0, -327622, 2, 0, -327542, 2, 0, -196614, 1, 0, -196612, 1, 0, -262006, 1, 0, -65542, 1, 0, -65540, 1, 0, -131065, 0, 0, -131063, 0, 0, -131061, 0, 0, -131059, 0, 0, -130934, 1, 0, 65530, 1, 0, 65532, 1, 0, 38, 2, 0, 40, 2, 0, 62, 0, 0, 64, 0, 0, 66, 0, 0, 68, 0, 0, 86, 0, 0, 138, 1, 0, 65641, 2, 0, 65643, 2, 0, 65645, 2, 0, 196602, 1, 0, 196604, 1, 0, 131103, 0, 0, 131105, 0, 0, 131107, 0, 0, 131118, 2, 0, 131120, 2, 0, 131122, 2, 0, 131210, 1, 0, 196680, 0, 0, 196682, 0, 0, 196684, 0, 0, 196708, 0, 0, 196724, 2, 0, 327674, 1, 0, 327676, 1, 0, 262198, 2, 0, 262200, 2, 0, 262202, 2, 0, 262222, 2, 0, 262224, 2, 0, 262226, 2, 0, 262235, 2, 0, 262237, 2, 0, 262239, 2, 0, 262282, 1, 0, 327718, 0, 0, 327720, 0, 0, 327722, 0, 0, 458746, 1, 0, 458748, 1, 0, 458750, 0, 0, 393216, 0, 0, 393218, 0, 0, 393220, 0, 0, 393222, 0, 0, 393224, 0, 0, 393226, 0, 0, 393228, 0, 0, 393230, 0, 0, 393238, 0, 0, 393240, 0, 0, 393242, 0, 0, 393339, 0, 0, 393341, 0, 0, 393348, 0, 0, 393354, 1, 0, 524287, 3, 0, 458756, 3, 0, 458790, 1, 0, 458792, 1, 0, 458794, 1, 0, 589818, 1, 0, 589820, 1, 0, 589822, 1, 0, 524288, 1, 0, 524290, 1, 0, 524292, 1, 0, 524294, 1, 0, 524296, 1, 0, 524298, 1, 0, 524300, 1, 0, 524302, 1, 0, 524310, 1, 0, 524312, 1, 0, 524314, 1, 0, 524409, 0, 0, 524411, 1, 0, 524413, 1, 0, 524426, 1, 0, 589941, 0, 0, 655417, 0, 0, 655419, 0, 0, 655421, 0, 0, 655428, 0, 0, 655481, 1, 0, 655483, 1, 0, 655485, 1, 0, 655496, 0, 0, 655498, 1, 0, 720969, 2, 0, 720971, 2, 0, 720973, 2, 0, 720975, 2, 0, 720977, 2, 0, 720982, 2, 0, 720984, 2, 0, 720986, 2, 0, 720988, 2, 0, 720994, 0, 0, 721000, 0, 0, 721006, 0, 0, 721008, 0, 0, 721013, 1, 0, 721034, 1, 0, 786505, 1, 0, 786507, 1, 0, 786509, 1, 0, 786511, 1, 0, 786513, 1, 0, 786518, 1, 0, 786520, 1, 0, 786522, 1, 0, 786524, 1, 0, 786570, 1, 0, 852066, 1, 0, 852072, 1, 0, 852078, 1, 0, 852080, 1, 0, 852085, 1, 0, 852106, 1, 0, 917577, 1, 0, 917579, 1, 0, 917581, 1, 0, 917583, 1, 0, 917585, 1, 0, 917590, 1, 0, 917592, 1, 0, 917594, 1, 0, 917596, 1, 0, 917642, 1, 0, 983178, 1, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 1702.45, 13.2784 )

[node name="creators" parent="Player" instance=ExtResource( 3 )]
position = Vector2( 629.912, -550.443 )
time_virus = 2
time_vaccine = 30

[node name="Viruses" type="Node" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
offset = Vector2( 540, 0 )
transform = Transform2D( 1, 0, 0, 1, 540, 0 )
scroll_ignore_camera_zoom = true

[node name="fondo" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.05, 0.05 )
motion_mirroring = Vector2( 1080, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="fondofinal" type="Sprite" parent="ParallaxBackground/fondo"]
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="fondo_medio" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.08, 0.08 )
motion_mirroring = Vector2( 1120, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="fondo2" type="Sprite" parent="ParallaxBackground/fondo_medio"]
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="frente" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 0.1 )
motion_mirroring = Vector2( 1120, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="fondoprimero" type="Sprite" parent="ParallaxBackground/frente"]
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="HIUD" parent="." instance=ExtResource( 7 )]

[node name="transition" type="Tween" parent="."]

[node name="Asset" type="Node2D" parent="."]

[node name="Roll" parent="Asset" instance=ExtResource( 12 )]
position = Vector2( 550.836, -173.531 )

[node name="Roll2" parent="Asset" instance=ExtResource( 12 )]
position = Vector2( 1241.4, 10.2011 )

[node name="Roll3" parent="Asset" instance=ExtResource( 12 )]
position = Vector2( 1247.63, -87.9364 )

[node name="Roll4" parent="Asset" instance=ExtResource( 12 )]
position = Vector2( 2140.78, -338.175 )

[node name="Roll5" parent="Asset" instance=ExtResource( 12 )]
position = Vector2( 2018.97, 166.792 )

[node name="Roll6" parent="Asset" instance=ExtResource( 12 )]
position = Vector2( 2753.33, 53.1021 )

[node name="Roll7" parent="Asset" instance=ExtResource( 12 )]
position = Vector2( 2422.14, -220.008 )

[node name="Roll8" parent="Asset" instance=ExtResource( 12 )]
position = Vector2( 6851.35, 449.416 )

[node name="Roll9" parent="Asset" instance=ExtResource( 12 )]
position = Vector2( 6647.69, 246.878 )

[node name="Roll10" parent="Asset" instance=ExtResource( 12 )]
position = Vector2( 5471.97, -28.2072 )

[node name="Roll11" parent="Asset" instance=ExtResource( 12 )]
position = Vector2( 5345.91, 486.204 )

[node name="Roll12" parent="Asset" instance=ExtResource( 12 )]
position = Vector2( 4356.35, -64.7507 )

[node name="Roll13" parent="Asset" instance=ExtResource( 12 )]
position = Vector2( 2976.51, 438.84 )

[node name="Roll14" parent="Asset" instance=ExtResource( 12 )]
position = Vector2( 4401.46, 295.482 )

[node name="Roll15" parent="Asset" instance=ExtResource( 12 )]
position = Vector2( 4397.97, 450.007 )

[node name="timers" type="Node2D" parent="."]

[node name="count_asset" type="Timer" parent="timers"]
wait_time = 0.5
one_shot = true

[node name="time_respaw" type="Timer" parent="timers"]
wait_time = 1.5
one_shot = true

[node name="ration_movement" type="Timer" parent="timers"]
wait_time = 0.5
one_shot = true
[connection signal="body_entered" from="bound" to="." method="_on_bound_body_entered"]
[connection signal="die" from="Player" to="." method="_on_Player_die"]
[connection signal="take_damage" from="Player" to="." method="_on_Player_take_damage"]
[connection signal="take_roll" from="Player" to="." method="_on_Player_take_roll"]
[connection signal="take_score" from="Player" to="." method="_on_Player_take_score"]
[connection signal="timeout" from="timers/count_asset" to="." method="_on_count_asset_timeout"]
[connection signal="timeout" from="timers/time_respaw" to="." method="_on_time_respaw_timeout"]
[connection signal="timeout" from="timers/ration_movement" to="." method="_on_ration_movement_timeout"]
